fix(icon-button-bar): override OverflowMenu` styles, prevent potential override of size variable

--- a/src/components/IconButtonBar/_mixins.scss
+++ b/src/components/IconButtonBar/_mixins.scss
@@ -4,29 +4,31 @@
 /// @copyright IBM Security 2019
 ////
 
-/// Variation dimensions.
-/// @type Map<String, Length>
-$icon-button__sizes: (
-  'sm': 4,
-  'md': 5,
-  'lg': 6,
-  'xl': 8,
-);
-
 @mixin icon-button-bar {
+  /// Variation dimensions.
+  /// @type Map<String, Length>
+  $icon-button-bar__sizes: (
+    'sm': 4,
+    'md': 5,
+    'lg': 6,
+    'xl': 8,
+  );
+
   $root: &;
 
   display: flex;
   overflow: none;
 
-  @each $icon-button__size, $icon-button__unit in $icon-button__sizes {
+  @each $icon-button-bar__size,
+    $icon-button-bar__unit in $icon-button-bar__sizes
+  {
     /// Variation dimensions.
     /// @type Length
     $icon-button-bar__sizing__dimensions: carbon--mini-units(
-      $count: $icon-button__unit,
+      $count: icon-button-bar__unit,
     );
 
-    &--#{$icon-button__size} {
+    &--#{icon-button-bar__size} {
       min-width: $icon-button-bar__sizing__dimensions;
 
       #{$root}__overflow-menu {
